--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earthwise Ireland</title>
+    <title>EarthWise Ireland</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Earthwise Ireland</h1>
+    <h1>Welcome to EarthWise Ireland</h1>
     <p>Our site is under construction. Check back soon!</p>
 </body>
 </html>
