--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
           <li class="nav-item"><a class="nav-link" href="#competitors">Competitors</a></li>
           <li class="nav-item"><a class="nav-link" href="#implementation-plan">Implementation</a></li>
           <li class="nav-item"><a class="nav-link" href="#marketing-strategy">Marketing</a></li>
-          <li class="nav-item"><a class="nav-link" href="#financial-overview">Financials</a></li>
           <li class="nav-item"><a class="nav-link" href="#roadmap">Roadmap</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
         </ul>
@@ -129,15 +128,7 @@
             <li><strong>Long-Term:</strong> Become Ireland’s most technologically advanced agri-environmental consultancy, offering top-quality services at competitive rates.</li>
           </ul>
         </div>
-        <!-- Financial Overview -->
-        <div class="col-md-6">
-          <h4>Financial Overview</h4>
-          <ul>
-            <li><strong>Year 1 Revenue Goal:</strong> €50,000–€100,000</li>
-            <li><strong>Funding:</strong> Self-funded by the founders; no loans or outside investment required.</li>
-            <li><strong>Profitability Strategy:</strong> Operate with minimal overhead, pivot focus quickly if any service line underperforms, and keep operating costs low.</li>
-          </ul>
-        </div>
+        <!-- Removed financial goals/details from this column -->
       </div>
     </div>
   </section>
@@ -160,7 +151,7 @@
           </span>
           <h4 class="my-3">Agronomy</h4>
           <p class="text-muted">
-            Regular on-farm visits, crop inspections, and long-term strategic planning for fertilizer application, yield optimization, and regulatory compliance. 
+            Regular on-farm visits, crop inspections, and long-term strategic planning for fertilizer application, yield optimization, and regulatory compliance.
             <br><strong>Benefit:</strong> Improved margins, sustainability, and professional agronomic expertise.
           </p>
         </div>
@@ -218,7 +209,7 @@
           <h4>Type of Customers Served</h4>
           <ul>
             <li><strong>Individuals (Farmers):</strong> Over 130,000 active farms in Ireland seeking grant support, environmental compliance, and nutrient management.</li>
-            <li><strong>Businesses:</strong> Agri-businesses, renewable energy companies, etc., needing environmental plans or compliance reporting.</li>
+            <li><strong>Businesses:</strong> Agri-businesses, renewable energy companies, and others needing environmental plans or compliance reporting.</li>
             <li><strong>Other Advisors:</strong> Smaller consultancies or independent advisors requiring short-term or specialized support.</li>
           </ul>
         </div>
@@ -248,7 +239,7 @@
             <li><strong>Agronomy & Consultancy:</strong> Typically project-based or day-rate (e.g., €400 + VAT per day for training/contract work).</li>
             <li><strong>Soil Sampling:</strong> €10 + VAT per sample, scalable based on volume.</li>
             <li><strong>Grant Application Services:</strong> Flexible pricing based on scope and complexity, with possible volume discounts.</li>
-            <li><strong>Overall Strategy:</strong> Keep overhead low to offer competitive pricing; leverage automation to reduce labor hours and pass savings on to clients.</li>
+            <li><strong>Overall Strategy:</strong> Keep operations lean to offer competitive pricing; leverage automation to reduce labor hours and pass savings on to clients.</li>
           </ul>
         </div>
       </div>
@@ -307,7 +298,7 @@
           <h4>Overall Company Strategy</h4>
           <ul>
             <li><strong>Objectives:</strong> Develop a reputation for fast, tech-driven advisory; maintain lean operations.</li>
-            <li><strong>Implementation Tactics:</strong> Attend agricultural events, leverage personal referrals, automate internal processes for quick paperwork turnaround.</li>
+            <li><strong>Implementation Tactics:</strong> Attend agricultural events, leverage personal referrals, automate paperwork for quick turnaround.</li>
             <li><strong>Scalability:</strong> Processes and technology designed for growth without large staff expansions.</li>
           </ul>
         </div>
@@ -316,7 +307,7 @@
   </section>
 
   <!-- Marketing Plans -->
-  <section class="page-section bg-light" id="marketing-strategy">
+  <section class="page-section" id="marketing-strategy">
     <div class="container">
       <div class="text-center">
         <h2 class="section-heading text-uppercase">Marketing Strategy</h2>
@@ -337,7 +328,7 @@
           <h4>Future Marketing Plans</h4>
           <ul>
             <li>Explore limited digital marketing (website with resources for farmers).</li>
-            <li>Maintain active presence at agricultural fairs and conferences.</li>
+            <li>Maintain an active presence at agricultural fairs and conferences.</li>
             <li>Target audiences:
               <ul>
                 <li>Farmers needing grant support or compliance advice.</li>
@@ -345,36 +336,6 @@
                 <li>Existing environmental consultancies needing specialized or overflow support.</li>
               </ul>
             </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Financial Projections -->
-  <section class="page-section" id="financial-overview">
-    <div class="container">
-      <div class="text-center">
-        <h2 class="section-heading text-uppercase">Capital & Financial Projections</h2>
-        <h3 class="section-subheading text-muted">
-          Funding, revenue streams, and profitability approach.
-        </h3>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h4>Source of Funds & Capital Investment</h4>
-          <ul>
-            <li><strong>Founder-Funded:</strong> Using personal investments from the founders; no external loans or funding sought.</li>
-            <li><strong>Pivot Strategy:</strong> Quickly shift focus if any service line underperforms, rather than seek external capital.</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h4>Primary Revenue & Profitability</h4>
-          <ul>
-            <li><strong>Revenue Streams:</strong> Grant application support, agronomy consulting, soil sampling, contract work/training.</li>
-            <li><strong>Year 1 Revenue:</strong> €50,000–€100,000 with expected 15–20% annual growth in subsequent years.</li>
-            <li><strong>Expenses:</strong> Software subscriptions, travel, insurance, and minimal overhead.</li>
-            <li><strong>Profitability:</strong> Maintained by low labor costs, automation, and efficient administrative management.</li>
           </ul>
         </div>
       </div>
@@ -400,10 +361,10 @@
               <strong>Months 4–6:</strong> Attend major agriculture events; pursue tenders for mid-sized projects.
             </li>
             <li>
-              <strong>Months 7–9:</strong> Assess service line profitability; pivot if underperformance arises. Explore partnerships with renewable energy providers.
+              <strong>Months 7–9:</strong> Assess service lines for performance; pivot if underperformance arises. Explore partnerships with renewable energy providers.
             </li>
             <li>
-              <strong>Months 10–12:</strong> Evaluate performance vs. KPIs (daily revenue, client count, margins). Adjust pricing or service offerings for continued growth.
+              <strong>Months 10–12:</strong> Evaluate overall business performance. Adjust service offerings as needed for continued growth.
             </li>
           </ul>
         </div>
