--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
           <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">Products &amp; Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
         </ul>
       </div>
@@ -67,7 +67,7 @@
     </div>
   </header>
 
-  <!-- High-Level Business Summary / Overview-->
+  <!-- High-Level Business Overview-->
   <section class="page-section bg-light" id="overview">
     <div class="container">
       <div class="text-center">
@@ -89,7 +89,7 @@
     </div>
   </section>
 
-  <!-- Products & Services -->
+  <!-- Products & Services SUMMARY Section -->
   <section class="page-section" id="services">
     <div class="container">
       <div class="text-center">
@@ -98,62 +98,137 @@
           Delivering comprehensive solutions for agricultural and environmental needs.
         </h3>
         <p>
-          We offer a range of services designed to help clients optimize their farming practices, stay compliant with regulations, and streamline their grant applications.
+          Below is a quick overview of each service. Click “Learn More” for further information.
         </p>
       </div>
-
-      <!-- Service: Agronomy -->
       <div class="row text-center">
-        <div class="col-lg-12">
-          <h3 class="my-4">Agronomy</h3>
+        <!-- Agronomy -->
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-tractor fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="my-3">Agronomy</h4>
           <p class="text-muted">
-            <strong>Brief Description:</strong> We provide regular on-farm visits, crop inspections, and strategic planning for fertilizer application, yield optimization, and regulatory compliance.
+            On-farm visits, crop inspections, and strategic planning for fertilizer application, yield optimization, and compliance.
           </p>
+          <a href="#service-agronomy" class="btn btn-primary btn-sm">Learn More</a>
+        </div>
+        <!-- Environmental Monitoring -->
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-seedling fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="my-3">Environmental Monitoring</h4>
           <p class="text-muted">
-            <strong>Further Information:</strong> Our agronomy services include field trials to test new products or methods, along with nutrient management plans tailored to each farm’s soil conditions and crop requirements.
+            Soil sampling, grass measuring, and water testing to ensure environmental compliance and promote sustainability.
+          </p>
+          <a href="#service-environmental" class="btn btn-primary btn-sm">Learn More</a>
+        </div>
+        <!-- Grant Application Support -->
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-file-invoice-dollar fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="my-3">Grant Support</h4>
+          <p class="text-muted">
+            Handling paperwork for grant and scheme applications, reducing errors and saving valuable time.
+          </p>
+          <a href="#service-grants" class="btn btn-primary btn-sm">Learn More</a>
+        </div>
+        <!-- Consultancy for Other Ag-Advisors -->
+        <div class="col-md-3">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-handshake fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="my-3">Consultancy</h4>
+          <p class="text-muted">
+            Training, contract-based work, and process improvement consulting for smaller agricultural advisory firms.
+          </p>
+          <a href="#service-advisors" class="btn btn-primary btn-sm">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- DETAILED SERVICE SECTIONS BELOW -->
+
+  <!-- Service: Agronomy -->
+  <section class="page-section bg-light" id="service-agronomy">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Agronomy</h2>
+        <h3 class="section-subheading text-muted">
+          Regular on-farm visits, crop inspections, and strategic planning.
+        </h3>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <p>
+            We provide regular on-farm visits, crop inspections, and long-term strategic planning for fertilizer application, yield optimization, and regulatory compliance. Our agronomy services also include field trials to test new products or methods, as well as nutrient management plans tailored to each farm’s specific soil conditions and crop requirements.
           </p>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- Service: Environmental Monitoring -->
-      <div class="row text-center mt-5">
+  <!-- Service: Environmental Monitoring -->
+  <section class="page-section" id="service-environmental">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Environmental Monitoring</h2>
+        <h3 class="section-subheading text-muted">
+          Soil sampling, grass measuring, and water testing.
+        </h3>
+      </div>
+      <div class="row">
         <div class="col-lg-12">
-          <h3 class="my-4">Environmental Monitoring</h3>
-          <p class="text-muted">
-            <strong>Brief Description:</strong> We conduct soil sampling, grass measuring, and water testing to ensure environmental compliance and promote sustainable practices.
-          </p>
-          <p class="text-muted">
-            <strong>Further Information:</strong> By analyzing critical data, we help farms and businesses adapt to changing regulations and make environmentally responsible decisions.
+          <p>
+            Our monitoring services ensure that farms and businesses stay compliant with environmental regulations and promote sustainable practices. By analyzing soil, grass, and water data, we help clients adapt to changing regulations and make environmentally responsible decisions backed by solid metrics.
           </p>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- Service: Grant Application Support -->
-      <div class="row text-center mt-5">
+  <!-- Service: Grant Application Support -->
+  <section class="page-section bg-light" id="service-grants">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Grant Application Support</h2>
+        <h3 class="section-subheading text-muted">
+          Streamlining paperwork for BISS, TAMS, SCIS, ACRES, and more.
+        </h3>
+      </div>
+      <div class="row">
         <div class="col-lg-12">
-          <h3 class="my-4">Grant Application Support</h3>
-          <p class="text-muted">
-            <strong>Brief Description:</strong> We handle paperwork and administration for grant and scheme applications (BISS, TAMS, SCIS, ACRES, etc.), saving clients time and reducing errors.
-          </p>
-          <p class="text-muted">
-            <strong>Further Information:</strong> We also partner with businesses—such as solar panel providers—to manage their customers’ grant applications, leveraging our automation to streamline the entire process.
+          <p>
+            We manage the administration of various grant and scheme applications, reducing the burden on our clients and minimizing errors. Our expertise in automation also makes the process faster and more cost-effective. Additionally, we partner with businesses—such as solar panel providers—to handle grant applications for their customers, offering a seamless end-to-end solution.
           </p>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- Service: Consultancy for Other Ag-Advisors -->
-      <div class="row text-center mt-5">
+  <!-- Service: Consultancy for Other Ag-Advisors -->
+  <section class="page-section" id="service-advisors">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Consultancy for Other Ag-Advisors</h2>
+        <h3 class="section-subheading text-muted">
+          Training, contract-based work, and process improvement.
+        </h3>
+      </div>
+      <div class="row">
         <div class="col-lg-12">
-          <h3 class="my-4">Consultancy for Other Ag-Advisors</h3>
-          <p class="text-muted">
-            <strong>Brief Description:</strong> We offer training, contract-based work, and process improvement consulting to smaller agricultural advisory firms.
-          </p>
-          <p class="text-muted">
-            <strong>Further Information:</strong> By sharing our advanced automation systems and specialized agronomy knowledge, we enable advisors to enhance their services and operate more efficiently.
+          <p>
+            We offer contract-based work, advanced automation training, and process improvement consulting specifically tailored for smaller agricultural advisory firms. By sharing our specialized agronomy knowledge and efficient workflows, we enable other advisors to enhance their service offerings and operate more effectively.
           </p>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -178,7 +253,7 @@
             <h4>Catherine O’Donoghue</h4>
             <p class="text-muted">Founder, CEO (50% Shareholder)</p>
             <p>
-              Catherine brings five years of experience in agronomy and agri-environmental services. She focuses on delivering high-quality advisory solutions and forging strong client relationships.
+              Catherine has five years of experience in agronomy and agri-environmental services. She focuses on delivering high-quality advisory solutions and forging strong client relationships.
             </p>
           </div>
         </div>
