--- a/index.html
+++ b/index.html
@@ -242,31 +242,31 @@
         </h3>
       </div>
       <div class="row">
-        <!-- Catherine O’Donoghue -->
+        <!-- Cathy O’Donoghue -->
         <div class="col-lg-6">
           <div class="team-member">
             <img
               class="mx-auto rounded-circle"
-              src="assets/img/team/catherine.jpg"
-              alt="Catherine O’Donoghue"
+              src="assets/img/team/Cathy.jpg"
+              alt="Cathy O’Donoghue"
             />
-            <h4>Catherine O’Donoghue</h4>
-            <p class="text-muted">Founder, CEO (50% Shareholder)</p>
+            <h4>Cathy O’Donoghue</h4>
+            <p class="text-muted">Founder & CEO</p>
             <p>
-              Catherine has five years of experience in agronomy and agri-environmental services. She focuses on delivering high-quality advisory solutions and forging strong client relationships.
+              Cathy has five years of experience in agronomy and agri-environmental services. She focuses on delivering high-quality advisory solutions and forging strong client relationships.
             </p>
           </div>
         </div>
-        <!-- Adam Joseph O’Reilly -->
+        <!-- Adam O’Reilly -->
         <div class="col-lg-6">
           <div class="team-member">
             <img
               class="mx-auto rounded-circle"
               src="assets/img/team/adam.jpg"
-              alt="Adam Joseph O’Reilly"
+              alt="Adam O’Reilly"
             />
-            <h4>Adam Joseph O’Reilly</h4>
-            <p class="text-muted">Additional Founder, Secretary (50% Shareholder)</p>
+            <h4>Adam O’Reilly</h4>
+            <p class="text-muted">Additional Founder</p>
             <p>
               Adam contributes advanced software development skills, creating automated workflows that reduce overhead and streamline operations, ensuring a modern approach to agricultural consulting.
             </p>
