--- a/index.html
+++ b/index.html
@@ -245,10 +245,11 @@
         <!-- Cathy O’Donoghue -->
         <div class="col-lg-6">
           <div class="team-member">
+            <!-- Placeholder image with “C” -->
             <img
               class="mx-auto rounded-circle"
-              src="assets/img/team/Cathy.jpg"
-              alt="Cathy O’Donoghue"
+              src="https://via.placeholder.com/200x200.png?text=C"
+              alt="Cathy O’Donoghue Placeholder"
             />
             <h4>Cathy O’Donoghue</h4>
             <p class="text-muted">Founder & CEO</p>
@@ -260,10 +261,11 @@
         <!-- Adam O’Reilly -->
         <div class="col-lg-6">
           <div class="team-member">
+            <!-- Placeholder image with “A” -->
             <img
               class="mx-auto rounded-circle"
-              src="assets/img/team/adam.jpg"
-              alt="Adam O’Reilly"
+              src="https://via.placeholder.com/200x200.png?text=A"
+              alt="Adam O’Reilly Placeholder"
             />
             <h4>Adam O’Reilly</h4>
             <p class="text-muted">Additional Founder</p>
