--- a/index.html
+++ b/index.html
@@ -245,12 +245,11 @@
         <!-- Cathy O’Donoghue -->
         <div class="col-lg-6">
           <div class="team-member">
-            <!-- Placeholder image with “C” -->
-            <img
-              class="mx-auto rounded-circle"
-              src="https://via.placeholder.com/200x200.png?text=C"
-              alt="Cathy O’Donoghue Placeholder"
-            />
+            <!-- Same SVG style as services -->
+            <span class="fa-stack fa-6x mb-4">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-tractor fa-stack-1x fa-inverse"></i>
+            </span>
             <h4>Cathy O’Donoghue</h4>
             <p class="text-muted">Founder & CEO</p>
             <p>
@@ -261,12 +260,11 @@
         <!-- Adam O’Reilly -->
         <div class="col-lg-6">
           <div class="team-member">
-            <!-- Placeholder image with “A” -->
-            <img
-              class="mx-auto rounded-circle"
-              src="https://via.placeholder.com/200x200.png?text=A"
-              alt="Adam O’Reilly Placeholder"
-            />
+            <!-- Same SVG style, different icon for variety -->
+            <span class="fa-stack fa-6x mb-4">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-seedling fa-stack-1x fa-inverse"></i>
+            </span>
             <h4>Adam O’Reilly</h4>
             <p class="text-muted">Additional Founder</p>
             <p>
