--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
+          <!-- New Contact nav link -->
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -268,6 +270,40 @@
               Adam contributes advanced software development skills, creating automated workflows that reduce overhead and streamline operations, ensuring a modern approach to agricultural consulting.
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT US SECTION -->
+  <section class="page-section" id="contact">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Contact Us</h2>
+        <h3 class="section-subheading text-muted">We'd love to hear from you!</h3>
+      </div>
+      <div class="row align-items-center">
+        <!-- Contact Info -->
+        <div class="col-lg-4">
+          <h4 class="mb-3">Reach Out</h4>
+          <p class="mb-1"><strong>Phone:</strong> +353 123 4567</p>
+          <p class="mb-1"><strong>Email:</strong> <a href="mailto:info@earthwise.ie">info@earthwise.ie</a></p>
+          <p class="mb-1"><strong>Address:</strong></p>
+          <p>Corlateerin Upper,<br />
+          Crosserlough, Co. Cavan,<br />
+          Ireland, A82H6V6</p>
+        </div>
+        <!-- Embedded Google Map -->
+        <div class="col-lg-8">
+          <iframe
+            width="100%"
+            height="450"
+            style="border:0"
+            loading="lazy"
+            allowfullscreen
+            referrerpolicy="no-referrer-when-downgrade"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2411.1062653084876!2d-7.326957384186114!3d53.92092519167701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485cd93f0d72358f%3A0x355c888825db91e9!2sCorlateerin%20Upper%2C%20Crosserlough%2C%20Co.%20Cavan%2C%20A82%2C%20Ireland!5e0!3m2!1sen!2sus!4v1692456894924!5m2!1sen!2sus"
+          ></iframe>
         </div>
       </div>
     </div>
