--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
           <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
-          <!-- New Contact nav link -->
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -81,7 +80,7 @@
       <div class="row">
         <div class="col-lg-12">
           <p>
-            EarthWise Consultancy LTD is an agri-environmental consultancy that specializes in providing agricultural and environmental advisory services to businesses and the farming community across Ireland. Our core offerings include agronomy, environmental monitoring, agricultural analysis, grant and scheme administration, field trials, and nutrient management plans. 
+            EarthWise Consultancy LTD is an agri-environmental consultancy that specializes in providing agricultural and environmental advisory services to businesses and the farming community across Ireland. Our core offerings include agronomy, environmental monitoring, agricultural analysis, grant and scheme administration, field trials, and nutrient management plans.
           </p>
           <p>
             We leverage cutting-edge automation and custom-coded workflows to deliver faster, more cost-effective solutions. Our vision is to become Ireland’s most technologically advanced agri-environmental consultancy, offering top-quality services at competitive rates.
@@ -286,12 +285,17 @@
         <!-- Contact Info -->
         <div class="col-lg-4">
           <h4 class="mb-3">Reach Out</h4>
-          <p class="mb-1"><strong>Phone:</strong> +353 123 4567</p>
+          <!-- Phone in yellow -->
+          <p class="mb-1"><strong>Phone:</strong> <span style="color:yellow">+353 123 4567</span></p>
+          <!-- Email (optional color) -->
           <p class="mb-1"><strong>Email:</strong> <a href="mailto:info@earthwise.ie">info@earthwise.ie</a></p>
+          <!-- Address in yellow -->
           <p class="mb-1"><strong>Address:</strong></p>
-          <p>Corlateerin Upper,<br />
-          Crosserlough, Co. Cavan,<br />
-          Ireland, A82H6V6</p>
+          <p style="color:yellow">
+            Corlateerin Upper,<br />
+            Crosserlough, Co. Cavan,<br />
+            Ireland, A82H6V6
+          </p>
         </div>
         <!-- Embedded Google Map -->
         <div class="col-lg-8">
