--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           &copy; EarthWise Consultancy LTD 2025
         </div>
         <div class="col-lg-4 my-3 my-lg-0">
-          <!-- Social media links (optional) -->
+<!--           <!-- Social media links (optional) -->
           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter">
             <i class="fab fa-twitter"></i>
           </a>
@@ -330,7 +330,7 @@
           </a>
           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
-          </a>
+          </a> -->
         </div>
         <div class="col-lg-4 text-lg-end">
           <a class="link-dark text-decoration-none me-3" href="#overview">Overview</a>
