--- a/index.html
+++ b/index.html
@@ -283,18 +283,15 @@
       </div>
       <div class="row align-items-center">
         <!-- Contact Info -->
-        <div class="col-lg-4">
+        <div class="col-lg-4" style="color:yellow;">
           <h4 class="mb-3">Reach Out</h4>
-          <!-- Phone in yellow -->
-          <p class="mb-1"><strong>Phone:</strong> <span style="color:yellow">+353 123 4567</span></p>
-          <!-- Email (optional color) -->
-          <p class="mb-1"><strong>Email:</strong> <a href="mailto:info@earthwise.ie">info@earthwise.ie</a></p>
-          <!-- Address in yellow -->
+          <p class="mb-1"><strong>Phone:</strong> +353 89 224 3330</p>
+          <p class="mb-1"><strong>Email:</strong> <a href="mailto:cathy@earthwise.ie" style="color:yellow;">cathy@earthwise.ie</a></p>
           <p class="mb-1"><strong>Address:</strong></p>
-          <p style="color:yellow">
-            Corlateerin Upper,<br />
-            Crosserlough, Co. Cavan,<br />
-            Ireland, A82H6V6
+          <p>
+            Corlateerin Upper,<br>
+            Crosserlough, Co. Cavan,<br>
+            Ireland
           </p>
         </div>
         <!-- Embedded Google Map -->
