--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
 <!--           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"> -->
 <!--             <i class="fab fa-facebook-f"></i> -->
 <!--           </a> -->
-<!--           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"> -->
-<!--             <i class="fab fa-linkedin-in"></i> -->
-<!--           </a> -->
+          <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/earthwise-consultancy-ltd/" aria-label="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
         </div>
         <div class="col-lg-4 text-lg-end">
           <a class="link-dark text-decoration-none me-3" href="#overview">Overview</a>
