--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
           </a>
         </div>
         <div class="col-lg-4 text-lg-end">
-          <a class="link-dark text-decoration-none me-3" href="#overview">Overview</a>
-          <a class="link-dark text-decoration-none" href="#services">Services</a>
+<!--           <a class="link-dark text-decoration-none me-3" href="#overview">Overview</a> -->
+<!--           <a class="link-dark text-decoration-none" href="#services">Services</a> -->
           <a class="link-dark text-decoration-none" href="privacy-policy.html">Privacy Policy</a>
         </div>
       </div>
