--- a/event-registration.html
+++ b/event-registration.html
@@ -40,7 +40,7 @@
   </nav>
 
   <!-- Registration Section -->
-  <section class="page-section" id="registration">
+  <section class="page-section" id="registration" style="padding-bottom: 10px;">
     <div class="container">
       <div class="text-center">
         <h2 class="section-heading text-uppercase">Event Registration</h2>
