--- a/event-test.html
+++ b/event-test.html
@@ -49,7 +49,7 @@
 
   <script>
     async function loadEvents() {
-      const apiUrl = "YOUR_GOOGLE_APPS_SCRIPT_URL"; // Replace with your deployed Apps Script URL
+      const apiUrl = "https://script.google.com/macros/s/AKfycbwPmeam3bekJlreWKo-aUvTHm7AQloUf4BsIwvybZX5xGS79uoGxljiDA8oRQtJt2KP/exec"; // Replace with your deployed Apps Script URL
       try {
         const response = await fetch(apiUrl);
         const events = await response.json();
