--- a/event-test.html
+++ b/event-test.html
@@ -2,19 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Registration</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="EarthWise Consultancy LTD - Event Registration">
+  <meta name="author" content="EarthWise Consultancy LTD">
+  <title>Event Registration - EarthWise Consultancy LTD</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  
+  <!-- Font Awesome icons -->
+  <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+  
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
+  
+  <!-- Core theme CSS (includes Bootstrap) -->
+  <link href="css/styles.css" rel="stylesheet">
+
   <style>
-    /* Event selection container */
-    #event-list-container {
-      text-align: center;
-      margin-top: 20px;
+    /* Centered event list container */
+    .page-section {
+      padding: 60px 0;
     }
 
     /* Event button styling */
     .event-button {
-      display: inline-block;
+      display: block;
       width: 100%;
       max-width: 400px;
       margin: 10px auto;
@@ -43,7 +57,7 @@
       text-align: center;
     }
 
-    /* Back button styling */
+    /* Back button */
     .back-button {
       display: inline-block;
       margin-top: 15px;
@@ -70,30 +84,85 @@
     }
   </style>
 </head>
-<body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="event-registration.html">Event Registration</a> |
-    <a href="privacy-policy.html">Privacy Policy</a>
+
+<body id="page-top">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/img/navbar-logo.svg" alt="EarthWise Consultancy Logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars ms-1"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html#overview">Overview</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#team">Our Team</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
-  <h1>Register for an Event</h1>
-  <p>Select an available event below:</p>
+  <!-- Page Content -->
+  <header class="masthead">
+    <div class="container">
+      <div class="masthead-subheading">Register for an Event</div>
+      <div class="masthead-heading text-uppercase">Secure Your Spot Today</div>
+      <p class="masthead-text">
+        Choose an available event below and complete your registration.
+      </p>
+    </div>
+  </header>
 
-  <div id="event-list-container">
-    <ul id="event-list">Loading events...</ul>
-  </div>
+  <section class="page-section bg-light" id="events">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-heading text-uppercase">Event Registration</h2>
+        <h3 class="section-subheading text-muted">Select an available event below:</h3>
+      </div>
 
-  <div id="form-container">
-    <h2 id="event-title"></h2>
-    <iframe id="event-iframe" src=""></iframe>
-    <br>
-    <button class="back-button" onclick="showEventList()">← Back to Event List</button>
-  </div>
+      <div id="event-list-container">
+        <ul id="event-list">Loading events...</ul>
+      </div>
 
+      <div id="form-container">
+        <h2 id="event-title"></h2>
+        <iframe id="event-iframe" src=""></iframe>
+        <br>
+        <button class="back-button" onclick="showEventList()">← Back to Event List</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer py-4">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-4 text-lg-start">
+          &copy; EarthWise Consultancy LTD 2025
+        </div>
+        <div class="col-lg-4 my-3 my-lg-0">
+          <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/earthwise-consultancy-ltd/" aria-label="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </div>
+        <div class="col-lg-4 text-lg-end">
+          <a class="link-dark text-decoration-none me-3" href="privacy-policy.html">Privacy Policy</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/scripts.js"></script>
   <script>
     async function loadEvents() {
-      const apiUrl = "https://script.google.com/macros/s/AKfycbwPmeam3bekJlreWKo-aUvTHm7AQloUf4BsIwvybZX5xGS79uoGxljiDA8oRQtJt2KP/exec"; // Replace with your deployed Apps Script URL
+      const apiUrl = "https://script.google.com/macros/s/AKfycbwPmeam3bekJlreWKo-aUvTHm7AQloUf4BsIwvybZX5xGS79uoGxljiDA8oRQtJt2KP/exec"; 
       try {
         const response = await fetch(apiUrl);
         const events = await response.json();
@@ -116,7 +185,7 @@
             document.getElementById("event-title").textContent = this.dataset.name;
             document.getElementById("event-iframe").src = this.dataset.link;
             document.getElementById("form-container").style.display = "block";
-            document.getElementById("event-list-container").style.display = "none"; // Hide event list
+            document.getElementById("event-list-container").style.display = "none";
           };
           eventList.appendChild(button);
         });
@@ -127,15 +196,11 @@
     }
 
     function showEventList() {
-      document.getElementById("event-list-container").style.display = "block"; // Show event list
-      document.getElementById("form-container").style.display = "none"; // Hide form
+      document.getElementById("event-list-container").style.display = "block";
+      document.getElementById("form-container").style.display = "none";
     }
 
-    loadEvents(); // Call the function on page load
+    loadEvents();
   </script>
-
-  <footer>
-    <p>&copy; 2025 EarthWise Consultancy LTD</p>
-  </footer>
 </body>
 </html>
