--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <i class="fas fa-seedling fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Adam O’Reilly</h4>
-            <p class="text-muted">Additional Founder</p>
+            <p class="text-muted">Co-Founder</p>
             <p>
               Adam contributes advanced software development skills, creating automated workflows that reduce overhead and streamline operations, ensuring a modern approach to agricultural consulting.
             </p>
