--- a/event-test.html
+++ b/event-test.html
@@ -110,10 +110,10 @@
   <!-- Page Content -->
   <header class="masthead">
     <div class="container">
-      <div class="masthead-subheading">Register for an Event</div>
+      <div class="masthead-subheading">Register for TAMS 3 Farm Health & Safety Training</div>
       <div class="masthead-heading text-uppercase">Secure Your Spot Today</div>
       <p class="masthead-text">
-        Choose an available event below and complete your registration.
+        Choose an available time below and complete your registration.
       </p>
     </div>
   </header>
@@ -121,8 +121,8 @@
   <section class="page-section bg-light" id="events">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Event Registration</h2>
-        <h3 class="section-subheading text-muted">Select an available event below:</h3>
+        <h2 class="section-heading text-uppercase">Training Course Registration</h2>
+        <h3 class="section-subheading text-muted">Select an available health and safety training course time slot below:</h3>
       </div>
 
       <div id="event-list-container">
