--- a/event-test.html
+++ b/event-test.html
@@ -121,8 +121,8 @@
   <section class="page-section bg-light" id="events">
     <div class="container">
       <div class="text-center">
-        <h2 class="section-heading text-uppercase">Training Course Registration</h2>
-        <h3 class="section-subheading text-muted">Select an available health and safety training course time slot below:</h3>
+        <h2 class="section-heading text-uppercase">Course Registration</h2>
+        <h3 class="section-subheading text-muted">Select an available slot or call us to book over the phone at 0877104254</h3>
       </div>
 
       <div id="event-list-container">
