--- a/event-test.html
+++ b/event-test.html
@@ -90,7 +90,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/navbar-logo.svg" alt="EarthWise Consultancy Logo">
+        <img src="assets/img/logo.jpg" alt="EarthWise Consultancy Logo">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
