--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="#page-top">
-        <img src="assets/img/navbar-logo.svg" alt="EarthWise Consultancy Logo" />
+        <img src="assets/img/logo.jpg" alt="EarthWise Consultancy Logo" />
       </a>
       <button
         class="navbar-toggler"
