--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="col-lg-4" style="color:yellow;">
           <h4 class="mb-3">Reach Out</h4>
           <p class="mb-1"><strong>Phone:</strong> +353 89 224 3330</p>
-          <p class="mb-1"><strong>Email:</strong> <a href="mailto:cathy@earthwise.ie" style="color:yellow;">cathy@earthwise.ie</a></p>
+          <p class="mb-1"><strong>Email:</strong> <a href="mailto:cathy@earthwiseireland.ie" style="color:yellow;">cathy@earthwiseireland.ie</a></p>
           <p class="mb-1"><strong>Address:</strong></p>
           <p>
             Corlateerin Upper,<br>
