--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://earthwiseireland.ie/farm-safety-training.html">Farm Safety Training</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://earthwiseireland.ie/farm-safety-training">Farm Safety Training</a></li>
         </ul>
       </div>
     </div>
