--- a/index.html
+++ b/index.html
@@ -310,33 +310,28 @@
     </div>
   </section>
 
-  <!-- Footer-->
-  <footer class="footer py-4">
+<footer class="footer py-4">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-4 text-lg-start">
-          &copy; EarthWise Consultancy LTD 2025
+          &copy; EarthWise Consultancy LTD 2025<br>
+          Company Number: 778310 | VAT: IE4371408TH<br>
+          Registered Address: Corlateerin Upper, Crosserlough, Co. Cavan, Ireland
         </div>
         <div class="col-lg-4 my-3 my-lg-0">
-        <!-- Social media links (optional) -->
-<!--           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"> -->
-<!--             <i class="fab fa-twitter"></i> -->
-<!--           </a> -->
-<!--           <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"> -->
-<!--             <i class="fab fa-facebook-f"></i> -->
-<!--           </a> -->
           <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/earthwise-consultancy-ltd/" aria-label="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
         <div class="col-lg-4 text-lg-end">
-<!--           <a class="link-dark text-decoration-none me-3" href="#overview">Overview</a> -->
-<!--           <a class="link-dark text-decoration-none" href="#services">Services</a> -->
-          <a class="link-dark text-decoration-none" href="privacy-policy.html">Privacy Policy</a>
+          <a class="link-dark text-decoration-none me-3" href="privacy-policy.html">Privacy Policy</a>
+          <a class="link-dark text-decoration-none me-3" href="terms-and-conditions.html">Terms & Conditions</a>
+          <a class="link-dark text-decoration-none" href="mailto:cathy@earthwiseireland.ie">Contact Us</a>
         </div>
       </div>
     </div>
   </footer>
+
 
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
