--- a/farm-safety-training.html
+++ b/farm-safety-training.html
@@ -138,12 +138,13 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer py-4">
+<footer class="footer py-4">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-4 text-lg-start">
-          &copy; EarthWise Consultancy LTD 2025
+          &copy; EarthWise Consultancy LTD 2025<br>
+          Company Number: 778310 | VAT: IE4371408TH<br>
+          Registered Address: Corlateerin Upper, Crosserlough, Co. Cavan, Ireland
         </div>
         <div class="col-lg-4 my-3 my-lg-0">
           <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/company/earthwise-consultancy-ltd/" aria-label="LinkedIn">
@@ -152,6 +153,8 @@
         </div>
         <div class="col-lg-4 text-lg-end">
           <a class="link-dark text-decoration-none me-3" href="privacy-policy.html">Privacy Policy</a>
+          <a class="link-dark text-decoration-none me-3" href="terms-and-conditions.html">Terms & Conditions</a>
+          <a class="link-dark text-decoration-none" href="mailto:cathy@earthwiseireland.ie">Contact Us</a>
         </div>
       </div>
     </div>
